tailwind not working

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+.Intro {
+  display: grid;
+  grid-template-columns: 50% 50%;
+}
+
 .App {
   text-align: center;
 }
