--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,47 +1,42 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-.Menu {
+.menu {
   display: grid;
   grid-template-columns: 50% 50%;
-}
-
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+  grid-gap: 50%;
   align-items: center;
   justify-content: center;
+
+  box-sizing: border-box;
+  width: 25%;
+  height: 50%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.item {
+  box-sizing: border-box;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  padding: 0;
+  width: auto;
+  height: auto;
+  background: grey;
+  border: 2px solid black;
+  border-radius: 10px;
+  font-size: 75px;
+}
+.App {
+  min-height: 100vh;
+  background-color: #282c34;
+}
+
+.start {
+  width: auto;
+  height: auto;
+  display: flex;
+  text-align: center;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   font-size: calc(10px + 2vmin);
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
