--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -14,7 +14,7 @@
 
 .bar {
   display: grid;
-  grid-template-columns: 75% 25%;
+  grid-template-columns: 50% 505;
   grid-gap: 50%;
   align-items: center;
   justify-content: center;
@@ -59,4 +59,65 @@
 th,
 tr {
   border: 1px solid black;
+}
+
+.form-popup {
+  display: none;
+  position: fixed;
+  bottom: 30%;
+  right: 10%;
+  border: 3px solid #f1f1f1;
+  z-index: 9;
+}
+
+.form-container {
+  min-width: 75vw;
+  padding: 10px;
+  background-color: lightgray;
+}
+
+/* Full-width input fields */
+.form-container input[type="text"],
+.form-container input[type="location"],
+.form-container input[type="date"] {
+  width: 75%;
+  padding: 15px;
+  margin: 5px 0 22px 0;
+  border: none;
+  background: #f1f1f1;
+  font-size: calc(10px + 2vmin);
+}
+
+/* When the inputs get focus, do something */
+.form-container input[type="text"]:focus,
+.form-container input[type="location"],
+.form-container input[type="date"]:focus {
+  background-color: #ddd;
+  outline: none;
+}
+
+/* Set a style for the submit/login button */
+.form-container .btn {
+  background-color: #04aa6d;
+  color: white;
+  padding: 16px 20px;
+  border: none;
+  cursor: pointer;
+  width: 25%;
+  margin-bottom: 10px;
+  opacity: 0.8;
+  margin-left: 1vw;
+  margin-right: 1vw;
+  font-size: calc(10px + 2vmin);
+}
+
+/* Add a red background color to the cancel button */
+.form-container .cancel {
+  background-color: red;
+}
+
+/* Add some hover effects to buttons */
+.form-container .btn:hover,
+.open-button:hover {
+  opacity: 1;
 }
