--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -14,7 +14,7 @@
 
 .bar {
   display: grid;
-  grid-template-columns: 50% 505;
+  grid-template-columns: 50% 50;
   grid-gap: 50%;
   align-items: center;
   justify-content: center;
@@ -24,6 +24,24 @@
   height: 50%;
   margin-left: auto;
   margin-right: auto;
+}
+
+.navbar {
+  display: grid;
+  grid-template-columns: 33% 33% 33%;
+  grid-gap: 33%;
+  align-items: center;
+  justify-content: center;
+  box-sizing: border-box;
+  width: 55%;
+  height: 50%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.navtext {
+  font-size: 3vh;
+  color: white;
 }
 
 .item {
@@ -107,6 +125,44 @@ tr {
   margin-bottom: 10px;
   opacity: 0.8;
   margin-left: 1vw;
+  margin-right: 1vw;
+  font-size: calc(10px + 2vmin);
+}
+
+.userbtn {
+  background-color: #04aa6d;
+  color: black;
+  padding: 16px 20px;
+  border: none;
+  cursor: pointer;
+  width: 25%;
+  margin-bottom: 10px;
+  opacity: 0.8;
+  margin-right: 1vw;
+  font-size: calc(10px + 2vmin);
+}
+
+.accounttoggleon {
+  background-color: #04aa6d;
+  color: black;
+  padding: 16px 20px;
+  border: none;
+  cursor: pointer;
+  width: 25%;
+  margin-bottom: 10px;
+  opacity: 0.8;
+  margin-right: 1vw;
+  font-size: calc(10px + 2vmin);
+}
+.accounttoggleoff {
+  background-color: #aa0404;
+  color: black;
+  padding: 16px 20px;
+  border: none;
+  cursor: pointer;
+  width: 25%;
+  margin-bottom: 10px;
+  opacity: 0.8;
   margin-right: 1vw;
   font-size: calc(10px + 2vmin);
 }
