--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -192,6 +192,14 @@ tr {
   grid-template-rows: 40% 20% 20% 20%;
   justify-content: center;
 }
+.account-page-sidebar-driver {
+  padding: 10px;
+  flex: 0 0 15%;
+  background-color: aqua;
+  display: grid;
+  grid-template-rows: 25% 25% 25% 25%;
+  justify-content: center;
+}
 .account-page-main {
   padding: 10px;
   flex: 1;
