--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -12,6 +12,16 @@
   margin-right: auto;
 }
 
+.box {
+  border-radius: 10px;
+  width: 90%;
+  height: 90%;
+  border: 1px solid black;
+  box-shadow: 5px 5px 5px #7f8183;
+  padding: 5px;
+  background-color: #ffffff;
+}
+
 .bar {
   display: grid;
   grid-template-columns: 50% 50;
@@ -59,9 +69,8 @@
 }
 .App {
   min-height: 100vh;
-  /* background-color: #282c34; */
+  background-color: #f2f2f2;
 }
-
 .start {
   width: auto;
   height: auto;
@@ -358,26 +367,5 @@ th {
   background-color: white;
 }
 
-.container {
-  width: 100%;
-  height: 100%;
-
-  background: #000000;
-  --gap: 5em;
-  --line: 1px;
-  --color: rgba(255, 255, 255, 0.2);
-
-  background-image: linear-gradient(
-      -90deg,
-      transparent calc(var(--gap) - var(--line)),
-      var(--color) calc(var(--gap) - var(--line) + 1px),
-      var(--color) var(--gap)
-    ),
-    linear-gradient(
-      0deg,
-      transparent calc(var(--gap) - var(--line)),
-      var(--color) calc(var(--gap) - var(--line) + 1px),
-      var(--color) var(--gap)
-    );
-  background-size: var(--gap) var(--gap);
+.account-table {
 }
