--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -20,6 +20,8 @@
   box-shadow: 5px 5px 5px #7f8183;
   padding: 5px;
   background-color: #ffffff;
+  font-size: x-large;
+  display: inline-block;
 }
 
 .bar {
