--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -200,16 +200,21 @@ label:last-child span {
 .form-popup {
   display: none;
   position: fixed;
-  bottom: 30%;
-  right: 10%;
-  z-index: 9;
+  /* center popup */
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .form-container {
-  min-width: 75vw;
+  min-width: 50vw;
   padding: 10px;
   background-color: lightgray;
   border-radius: 10px;
+  /* center elements in popup */
+  text-align: center;
+  margin: 10px;
+  border: 2px solid black;
 }
 
 /* Full-width input fields */
