--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -145,6 +145,13 @@
   border-radius: 10px;
 }
 
+.input-box-chat {
+  border-radius: 10px;
+  width: 100%;
+  height: 5vh;
+  font-size: calc(10px + 2vmin);
+}
+
 .mychoice:focus {
   outline: 0;
   border-color: #2260ff;
@@ -346,7 +353,7 @@ label:last-child span {
   padding: 10px;
   flex: 0 0 15%;
   display: grid;
-  grid-template-rows: 30% 10% 10% 10%;
+  grid-template-rows: 30% 30% 15% 25%;
   justify-content: center;
   align-items: center;
   justify-items: center;
