--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -453,23 +453,22 @@ label:last-child span {
 .infotable th {
   width: auto;
   border-collapse: collapse;
-  border: 1px solid black;
+  border-bottom: 1px solid black;
   padding: 8px;
   text-align: center;
-  background-color: white;
 }
 
 .infotable th {
   padding-top: 12px;
   padding-bottom: 12px;
   text-align: center;
-  background-color: #666666;
+  font-style: bold;
+  border-bottom: 3px solid black;
 }
 
 .infotable td {
   padding: 8px;
   text-align: center;
-  background-color: white;
 }
 
 .account-table {
