--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -280,11 +280,11 @@ label:last-child span {
   background-color: #04aa6d;
   color: lightgray;
   padding: 16px 20px;
-  border: none;
+  border: 2px solid transparent;
   cursor: pointer;
   width: 25%;
   margin-bottom: 10px;
-  opacity: 0.8;
+  opacity: 1;
   margin-left: 1vw;
   margin-right: 1vw;
   font-size: calc(10px + 2vmin);
@@ -295,11 +295,11 @@ label:last-child span {
   background-color: #04aa6d;
   color: black;
   padding: 16px 20px;
-  border: none;
+  border: 2px solid transparent;
   cursor: pointer;
   width: 25%;
   margin-bottom: 10px;
-  opacity: 0.8;
+  opacity: 1;
   margin-right: 1vw;
   font-size: calc(10px + 2vmin);
   border-radius: 10px;
@@ -309,11 +309,11 @@ label:last-child span {
   background-color: #04aa6d;
   color: black;
   padding: 16px 20px;
-  border: none;
+  border: 2px solid transparent;
   cursor: pointer;
   width: 25%;
   margin-bottom: 10px;
-  opacity: 0.8;
+  opacity: 1;
   margin-right: 1vw;
   font-size: calc(10px + 2vmin);
   border-radius: 10px;
@@ -322,11 +322,11 @@ label:last-child span {
   background-color: #aa0404;
   color: black;
   padding: 16px 20px;
-  border: none;
+  border: 2px solid transparent;
   cursor: pointer;
   width: 25%;
   margin-bottom: 10px;
-  opacity: 0.8;
+  opacity: 1;
   margin-right: 1vw;
   font-size: calc(10px + 2vmin);
   border-radius: 10px;
@@ -338,9 +338,10 @@ label:last-child span {
 }
 
 /* Add some hover effects to buttons */
-.form-container .btn:hover,
-.open-button:hover {
-  opacity: 1;
+.accounttoggleoff:hover,
+.userbtn:hover,
+.accounttoggleon:hover {
+  color: white;
 }
 
 .account-page {
